--- a/mobile/UI_ADHPCcM01.html
+++ b/mobile/UI_ADHPCcM01.html
@@ -34,9 +34,7 @@
                         <section aria-label="프로그램 목록" class="prog_list_sec prg_spec">
                             <div class="board_header">
                                 <p class="count" role="text"><span>전체</span> <strong>121,421</strong><span>건</span></p>
-                                <div class="year">
-                                    참여연도 : <strong class="point_color">2025</strong>년
-                                </div>
+                                <p class="year" role="text">참여연도 : <strong class="point_color">2025</strong>년</p>
                             </div>
 
                             <!-- table -->
@@ -204,7 +202,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="paging"></div>
+                            <div class="paging"><ul><li class="pagingBtn"><button type="button" class="first" onclick="fn_Move(1); return false;"><span class="blind">처음으로 가기</span></button></li><li class="pagingBtn"><button type="button" class="prev" onclick="fn_Move(1); return false;"><span class="blind">이전</span></button></li><li class="on"><button type="button" title="1 페이지 이동" aria-current="true">1</button></li><li><button type="button" onclick="fn_Move(2); return false;" title="2 페이지 이동">2</button></li><li><button type="button" onclick="fn_Move(3); return false;" title="3 페이지 이동">3</button></li><li><button type="button" onclick="fn_Move(4); return false;" title="4 페이지 이동">4</button></li><li><button type="button" onclick="fn_Move(5); return false;" title="5 페이지 이동">5</button></li><li class="pagingBtn"><button type="button" class="next" onclick="fn_Move(6); return false;"><span class="blind">다음</span></button></li><li class="pagingBtn"><button type="button" class="last" onclick="fn_Move(12106); return false;"><span class="blind">마지막으로 가기</span></button></li></ul></div>
+
                         </section>
                     </div>
                 </div>
