--- a/mobile/UI_ADHPCdS02.html
+++ b/mobile/UI_ADHPCdS02.html
@@ -60,7 +60,7 @@
                                         <div class="dt">학기</div>
                                         <div class="dd">
                                             <select class="new_down" title="학기 선택">
-                                                <option>선택</option>
+                                                <option hidden>선택</option>
                                             </select>
                                         </div>
                                     </div>
