--- a/pc/09_UI_ADHPAbP07.html
+++ b/pc/09_UI_ADHPAbP07.html
@@ -630,11 +630,11 @@
                         </div>
                     </div>
 
-                    <div class="newpop_save uni_save btn_box">
-                        <button type="button" class="btn big type02" onclick="location.href='';">닫기</button>
-                        <button type="submit" id="submitBtn" class="btn big fill type01" onclick="">적용</button>
-                    </div>
                 </div>
+            </div>
+            <div class="box_btn_wrap flex_al_r allcare_popsave">
+                <button type="button" class="btn big type02" onclick="location.href='';">닫기</button>
+                <button type="submit" id="submitBtn" class="btn big fill type01" onclick="">적용</button>
             </div>
         </section>
 </body>
