--- a/pc/UI_ADHPCbS06.html
+++ b/pc/UI_ADHPCbS06.html
@@ -106,10 +106,10 @@
                                                                     <span class="sr_only">필수 입력</span>
                                                                 </th>
                                                                 <td colspan="3">
-                                                                    <fieldset class="box_radio_group type_unselect">
+                                                                    <fieldset class="box_radio_group">
                                                                         <legend class="sr_only">참여자 분류 선택</legend>
                                                                         <div class="box_chk-group radio_group">
-                                                                            <input type="radio" class="ptcpType1" id="ptcpType1" name="ptcpType" value="graduate" checked>
+                                                                            <input type="radio" class="ptcpType1" id="ptcpType1" name="ptcpType" value="graduate" checked disabled>
                                                                             <label for="ptcpType1" class="unselect_label">
                                                                                 <span class="sr_only">선택지 1:</span>
                                                                                 <span class="label_text">&#9312; 2025년 재학생 맞춤형 고용서비스 사업 운영 대학(원)의 재학·휴학·수료 청년</span>
@@ -117,7 +117,7 @@
                                                                         </div>
 
                                                                         <div class="box_chk-group radio_group">
-                                                                            <input type="radio" class="ptcpType2" id="ptcpType2" name="ptcpType" value="youth">
+                                                                            <input type="radio" class="ptcpType2" id="ptcpType2" name="ptcpType" value="youth" disabled>
                                                                             <label for="ptcpType2" class="unselect_label">
                                                                                 <span class="sr_only">선택지 2:</span>
                                                                                 <span class="label_text">&#9313; ①에 해당하지 않는 만 18~34세의 최종학력 고등학교 졸업 이하인 미취업(고용보험 기준) 청년</span>
@@ -164,11 +164,11 @@
 
                                             <div class="box_group_wrap prof_radio_wrap">
                                                 <h3 class="t2_sb">참여 유형 선택</h3>
-                                                <div class="type_area box_radio_group type_unselect">
+                                                <div class="type_area box_radio_group">
                                                     <ul class="item_type">
                                                         <li>
                                                             <div class="box_chk-group radio_group">
-                                                                <input type="radio" id="빌드업프로젝트" name="참여유형선택" checked>
+                                                                <input type="radio" id="빌드업프로젝트" name="참여유형선택" checked disabled>
                                                                 <label for="빌드업프로젝트">
                                                                     <span class="w">
                                                                         <span class="t">빌드업 프로젝트</span>
@@ -179,7 +179,7 @@
                                                         </li>
                                                         <li>
                                                             <div class="box_chk-group radio_group">
-                                                                <input type="radio" id="점프업프로젝트" name="참여유형선택">
+                                                                <input type="radio" id="점프업프로젝트" name="참여유형선택" disabled>
                                                                 <label for="점프업프로젝트">
                                                                     <span class="w">
                                                                         <span class="t">점프업 프로젝트</span>
@@ -204,17 +204,17 @@
                                                     </div>
                                                     
                                                     <div class="agm_cho">
-                                                        <fieldset class="box_radio_group type_unselect" role="radiogroup" aria-labelledby="agmLabel">
+                                                        <fieldset class="box_radio_group" role="radiogroup" aria-labelledby="agmLabel">
                                                             <legend id="agmLabel" class="sr_only">개인정보 수집·이용·제공 동의</legend>                                                            
                                                             <div class="box_chk-group radio_group">
-                                                                <input type="radio" id="agmType1" name="agmType" value="yes" checked>
+                                                                <input type="radio" id="agmType1" name="agmType" value="yes" checked disabled>
                                                                 <label for="agmType1" class="unselect_label">
                                                                     <span class="label_text">동의</span>
                                                                 </label>
                                                             </div>
 
                                                             <div class="box_chk-group radio_group">
-                                                                <input type="radio" id="agmType2" name="agmType" value="no">
+                                                                <input type="radio" id="agmType2" name="agmType" value="no" disabled>
                                                                 <label for="agmType2" class="unselect_label">
                                                                     <span class="label_text">동의안함</span>
                                                                 </label>
