--- a/pc/UI_ADHPCfM01_1.html
+++ b/pc/UI_ADHPCfM01_1.html
@@ -78,7 +78,7 @@
                                         </ul>
 
                                         <div class="box_table_hd mt40">
-                                            <p class="tit">전체 <span class="txt_total">1111</span>건</p>
+                                            <p class="tit" role="text">전체 <span class="txt_total">1111</span>건</p>
                                         </div>
 
                                         <div class="notlist_inner">
