--- a/pc/UI_ADHPCgM01-2.html
+++ b/pc/UI_ADHPCgM01-2.html
@@ -106,18 +106,18 @@
                                             <div class="box_table_wrap mt16">
                                                 <div class="box_table_wrap">
                                                     <div class="box_table_hd">
-                                                        <p class="tit">전체 <span class="txt_total">1111</span>건</p>
+                                                        <p class="tit" role="text">전체 <span class="txt_total">1111</span>건</p>
                                                         <div class="section_right">
                                                             <span class="sel round new_sel_span">
                                                                 <select id="recordCountPerPage" name="recordCountPerPage" class="w100px" title="제출여부 선택">
-                                                                    <option value="" selected="selected" disabled>제출여부 전체</option>
+                                                                    <option value="" selected disabled>제출여부 전체</option>
                                                                     <option value="">TEST</option>
                                                                     <option value="">TEST</option>
                                                                 </select>
                                                             </span>
                                                             <span class="sel round new_sel_span">
                                                                 <select id="recordCountPerPage" name="recordCountPerPage" class="w100px" title="승인여부 선택">
-                                                                    <option value="" selected="selected" disabled>승인여부 전체</option>
+                                                                    <option value="" selected disabled>승인여부 전체</option>
                                                                     <option value="">TEST</option>
                                                                     <option value="">TEST</option>
                                                                 </select>
