--- a/pc/UI_ADHPChP03.html
+++ b/pc/UI_ADHPChP03.html
@@ -161,12 +161,12 @@
                         </ul>
     
                     </div>
-                    <div class="newpop_save uni_save btn_box mt40">
-                        <button type="button" class="btn big type02" onclick="">닫기</button>
-                        <button type="submit" id="submitBtn" class="btn big fill type01" onclick="">적용</button>
-                    </div>
-
+                    
                 </div>
+            </div>
+            <div class="box_btn_wrap flex_al_r allcare_popsave">
+                <button type="button" class="btn big type02" onclick="">닫기</button>
+                <button type="submit" id="submitBtn" class="btn big fill type01" onclick="">적용</button>
             </div>
         </section>
         <!-- 팝업 종료 -->
