--- a/index_univ.html
+++ b/index_univ.html
@@ -76,7 +76,7 @@
                     <td></td>
                     <td>운영대학 목록</td>
                     <td>UI_ADHPCaM01</td>
-                    <td class="status"></td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCaM01.html" target="_blank">PC</a>
@@ -539,7 +539,7 @@
                     <td>UI_ADHPCfS02</td>
                     <td class="status">완료</td>
                     <td></td>
-                    <td>
+                    <td> 
                         <a href="./pc/UI_ADHPCfS02.html" target="_blank">PC</a>
                         <a href="./mobile/UI_ADHPCfS02-1.html" target="_blank">Mo-1</a>
                         <a href="./mobile/UI_ADHPCfS02-2.html" target="_blank">Mo-2</a>
@@ -640,6 +640,7 @@
                     <td>
                         <a href="./pc/UI_ADHPCgM01-1.html" target="_blank">PC-1</a>
                         <a href="./pc/UI_ADHPCgM01-2.html" target="_blank">PC-2</a>
+                        <br>
                         <a href="./mobile/UI_ADHPCgM01-1.html" target="_blank">Mo-1</a>
                         <a href="./mobile/UI_ADHPCgM01-2.html" target="_blank">Mo-2</a>
                         <a href="./mobile/UI_ADHPCgM01-3.html" target="_blank">Mo-3</a>
@@ -740,6 +741,7 @@
                     <td>
                         <a href="./pc/UI_ADHPChS02-1.html" target="_blank">PC-1</a>
                         <a href="./pc/UI_ADHPChS02-2.html" target="_blank">PC-2</a>
+                        <br>
                         <a href="./mobile/UI_ADHPChS02-1.html" target="_blank">Mo-1</a>
                         <a href="./mobile/UI_ADHPChS02-2.html" target="_blank">Mo-2</a>
                     </td>
