--- a/mobile/UI_ADHPCbS08.html
+++ b/mobile/UI_ADHPCbS08.html
@@ -79,7 +79,7 @@
                                     <div>
                                         <div class="dt req_mark">참여자 분류</div>
                                         <div class="dd">
-                                            <fieldset class="radio_group">
+                                            <fieldset class="radio_group radio_twin_type02">
                                                 <legend class="sr_only">참여자 분류 선택</legend>
                                                 <div class="new_radio_item">
                                                     <input type="radio" id="customType1" name="customType" value="graduate" checked>
@@ -169,7 +169,7 @@
                                 <div class="box_table_wrap top_linewrap">
                                     <div>
                                         <div class="dd">
-                                            <fieldset class="radio_group">
+                                            <fieldset class="radio_group radio_twin_type02">
                                                 <legend class="sr_only">참여자 유형 선택</legend>
                                                 <div class="new_radio_item">
                                                     <input type="radio" id="빌드업프로젝트" name="참여자유형선택" checked>
@@ -204,7 +204,7 @@
                                         
                                     </div>
                                     
-                                    <div class="agm_cho">
+                                    <div class="agm_cho mt8">
                                         <fieldset class="radio_group radiof_type2">
                                             <legend class="sr_only">개인정보 이용에 대한 동의여부</legend>
                                             <div class="new_radio_item">
