--- a/pc/02_UI_ADHPAaM02.html
+++ b/pc/02_UI_ADHPAaM02.html
@@ -240,11 +240,11 @@
 
                                                 <div class="box_table_wrap">
                                                     <div class="box_table_hd">
-                                                        <p class="tit">전체 <span class="txt_total">1111</span>건</p>
+                                                        <p class="tit" role="text">전체 <span class="txt_total">1111</span>건</p>
                                                         <div class="section_right">
                                                             <span class="sel round new_sel_span">
                                                                 <select id="recordCountPerPage" name="recordCountPerPage" class="w100px" title="보기 갯수 선택">
-                                                                    <option value="10" selected="selected">10개씩 보기</option>
+                                                                    <option value="10" selected>10개씩 보기</option>
                                                                     <option value="30">30개씩 보기</option>
                                                                     <option value="50">50개씩 보기</option>
                                                                 </select>
@@ -360,7 +360,19 @@
                                                         </tbody>
                                                     </table>
                                                     
-                                                    <div class="section_bottom"></div>
+                                                    <div class="section_bottom">
+                                                        <div class="box_pagination">
+                                                            <button type="button" class="btn_page first" onclick="fn_Search(1); return false;"><span class="blind">처음으로 가기</span></button>&nbsp;
+                                                            <button type="button" class="btn_page prev" onclick="fn_Search(1); return false;"><span class="blind">이전</span></button>&nbsp;
+                                                            <button type="button" class="active" title="1 페이지 이동" aria-current="true">1</button>  &nbsp;
+                                                            <button type="button" onclick="fn_Search(2); return false;" title="2 페이지 이동">2</button>&nbsp;
+                                                            <button type="button" onclick="fn_Search(3); return false;" title="3 페이지 이동">3</button>&nbsp;
+                                                            <button type="button" onclick="fn_Search(4); return false;" title="4 페이지 이동">4</button>&nbsp;
+                                                            <button type="button" onclick="fn_Search(5); return false;" title="5 페이지 이동">5</button>&nbsp;
+                                                            <button type="button" class="btn_page next" onclick="fn_Search(11); return false;"><span class="blind">다음</span></button>&nbsp;
+                                                            <button type="button" class="btn_page last" onclick="fn_Search(9847); return false;"><span class="blind">마지막으로 가기</span></button>&nbsp;
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
 
@@ -630,7 +642,7 @@
                                 <div class="section_right">
                                     <span class="sel round new_sel_span">
                                         <select id="recordCountPerPage" name="recordCountPerPage" class="w100px" title="보기 갯수 선택">
-                                            <option value="10" selected="selected">10개씩 보기</option>
+                                            <option value="10" selected>10개씩 보기</option>
                                             <option value="30">30개씩 보기</option>
                                             <option value="50">50개씩 보기</option>
                                         </select>
@@ -892,7 +904,19 @@
                                 </tbody>
                             </table>
                             
-                            <div class="section_bottom"></div>
+                            <div class="section_bottom">
+                                <div class="box_pagination">
+                                    <button type="button" class="btn_page first" onclick="fn_Search(1); return false;"><span class="blind">처음으로 가기</span></button>&nbsp;
+                                    <button type="button" class="btn_page prev" onclick="fn_Search(1); return false;"><span class="blind">이전</span></button>&nbsp;
+                                    <button type="button" class="active" title="1 페이지 이동" aria-current="true">1</button>  &nbsp;
+                                    <button type="button" onclick="fn_Search(2); return false;" title="2 페이지 이동">2</button>&nbsp;
+                                    <button type="button" onclick="fn_Search(3); return false;" title="3 페이지 이동">3</button>&nbsp;
+                                    <button type="button" onclick="fn_Search(4); return false;" title="4 페이지 이동">4</button>&nbsp;
+                                    <button type="button" onclick="fn_Search(5); return false;" title="5 페이지 이동">5</button>&nbsp;
+                                    <button type="button" class="btn_page next" onclick="fn_Search(11); return false;"><span class="blind">다음</span></button>&nbsp;
+                                    <button type="button" class="btn_page last" onclick="fn_Search(9847); return false;"><span class="blind">마지막으로 가기</span></button>&nbsp;
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
