--- a/pc/10_UI_ADHPAbP08.html
+++ b/pc/10_UI_ADHPAbP08.html
@@ -228,7 +228,8 @@
 
         </div>
         <script src="../pc/js/include.js"></script>
-        <script src="../pc/js/include_share.js"></script>        <script src="../pc/js/contents.js"></script>
+        <script src="../pc/js/include_share.js"></script>        
+        <script src="../pc/js/contents.js"></script>
 
 
 
@@ -585,11 +586,11 @@
                         </div>
                     </div>
 
-                    <div class="newpop_save uni_save btn_box">
-                        <button type="button" class="btn big type02" onclick="location.href='';">닫기</button>
-                        <button type="submit" id="submitBtn" class="btn big fill type01" onclick="">적용</button>
-                    </div>
                 </div>
+            </div>
+            <div class="box_btn_wrap flex_al_r allcare_popsave">
+                <button type="button" class="btn big type02" onclick="location.href='';">닫기</button>
+                <button type="submit" id="submitBtn" class="btn big fill type01" onclick="">적용</button>
             </div>
         </section>
 </body>
