--- a/pc/UI_ADHPCcM02-1.html
+++ b/pc/UI_ADHPCcM02-1.html
@@ -80,7 +80,7 @@
                                         <div class="box_table_wrap mt40">
                                             <div class="box_table_wrap">
                                                 <div class="box_table_hd hd_space">
-                                                    <div class="sec_total"><p class="tit">전체 <span class="txt_total">1111</span>건</p></div>
+                                                    <div class="sec_total"><p class="tit" role="text">전체 <span class="txt_total">1111</span>건</p></div>
                                                     <div class="sec_year"><p>참여연도 : <span>2025</span>년</p></div>
                                                 </div>
                                                 <!-- table -->
@@ -158,7 +158,19 @@
                                                         <!-- <tr><td colspan="6" class="empty">등록된 내용이 없습니다.</td></tr> -->
                                                     </tbody>
                                                 </table>
-                                                <div class="section_bottom"></div>
+                                                <div class="section_bottom">
+                                                    <div class="box_pagination">
+                                                        <button type="button" class="btn_page first" onclick="fn_Search(1); return false;"><span class="blind">처음으로 가기</span></button>&nbsp;
+                                                        <button type="button" class="btn_page prev" onclick="fn_Search(1); return false;"><span class="blind">이전</span></button>&nbsp;
+                                                        <button type="button" class="active" title="1 페이지 이동" aria-current="true">1</button>  &nbsp;
+                                                        <button type="button" onclick="fn_Search(2); return false;" title="2 페이지 이동">2</button>&nbsp;
+                                                        <button type="button" onclick="fn_Search(3); return false;" title="3 페이지 이동">3</button>&nbsp;
+                                                        <button type="button" onclick="fn_Search(4); return false;" title="4 페이지 이동">4</button>&nbsp;
+                                                        <button type="button" onclick="fn_Search(5); return false;" title="5 페이지 이동">5</button>&nbsp;
+                                                        <button type="button" class="btn_page next" onclick="fn_Search(11); return false;"><span class="blind">다음</span></button>&nbsp;
+                                                        <button type="button" class="btn_page last" onclick="fn_Search(9847); return false;"><span class="blind">마지막으로 가기</span></button>&nbsp;
+                                                    </div>
+                                                </div>
                                             </div> 
                                         </div>
 
