--- a/pc/UI_ADHPCdS03.html
+++ b/pc/UI_ADHPCdS03.html
@@ -97,7 +97,7 @@
                                                                     <div class="new_selectbox">
                                                                         <label for="semester" class="sr_only">학기 선택</label>
                                                                         <select id="semester" name="semester" title="학기 선택">
-                                                                            <option disabled="">선택</option>
+                                                                            <option disabled>선택</option>
                                                                             <option value="1" selected>1학기</option>
                                                                             <option value="2">2학기</option>
                                                                         </select>
@@ -246,7 +246,7 @@
                                                                             <div class="new_selectbox">
                                                                                 <label for="division" class="sr_only">구분</label>
                                                                                 <select id="division" name="division" title="구분">
-                                                                                    <option disabled="">구분을 선택해 주세요.</option>
+                                                                                    <option disabled>구분을 선택해 주세요.</option>
                                                                                     <option value="자기주도형 진로역량강화 프로그램" selected>자기주도형 진로역량강화 프로그램</option>
                                                                                     <option value="TEST">TEST</option>
                                                                                 </select>
@@ -254,7 +254,7 @@
                                                                             <div class="new_selectbox box_w120">
                                                                                 <label for="year" class="sr_only">년도</label>
                                                                                 <select id="year" name="year" title="년도">
-                                                                                    <option disabled="">년도</option>
+                                                                                    <option disabled>년도</option>
                                                                                     <option value="2025" selected>2025년</option>
                                                                                     <option value="2024">2024년</option>
                                                                                 </select>
@@ -262,7 +262,7 @@
                                                                             <div class="new_selectbox box_w120">
                                                                                 <label for="month" class="sr_only">월</label>
                                                                                 <select id="month" name="month" title="월">
-                                                                                    <option disabled="">월</option>
+                                                                                    <option disabled>월</option>
                                                                                     <option value="1" selected>1월</option>
                                                                                     <option value="2">2월</option>
                                                                                     <option value="3">3월</option>
@@ -342,7 +342,7 @@
                                                                             <div class="new_selectbox">
                                                                                 <label for="division" class="sr_only">구분</label>
                                                                                 <select id="division" name="division" title="구분">
-                                                                                    <option disabled="">구분을 선택해 주세요.</option>
+                                                                                    <option disabled>구분을 선택해 주세요.</option>
                                                                                     <option value="동아리, 공모전, 대회활동, 일경험, 인턴 등의 목표" selected>동아리, 공모전, 대회활동, 일경험, 인턴 등의 목표</option>
                                                                                     <option value="TEST">TEST</option>
                                                                                 </select>
@@ -350,7 +350,7 @@
                                                                             <div class="new_selectbox box_w120">
                                                                                 <label for="grade" class="sr_only">학년</label>
                                                                                 <select id="grade" name="grade" title="학년">
-                                                                                    <option disabled="">학년</option>
+                                                                                    <option disabled>학년</option>
                                                                                     <option value="1" selected>1학년</option>
                                                                                     <option value="2">2학년</option>
                                                                                     <option value="3">3학년</option>
@@ -360,7 +360,7 @@
                                                                             <div class="new_selectbox box_w120">
                                                                                 <label for="semester" class="sr_only">학기</label>
                                                                                 <select id="semester" name="semester" title="학기">
-                                                                                    <option disabled="">학기</option>
+                                                                                    <option disabled>학기</option>
                                                                                     <option value="1" selected>1학기</option>
                                                                                     <option value="2">2학기</option>
                                                                                 </select>
@@ -421,7 +421,7 @@
                                                                             <div class="new_selectbox">
                                                                                 <label for="division" class="sr_only">구분</label>
                                                                                 <select id="division" name="division" title="구분">
-                                                                                    <option disabled="">구분을 선택해 주세요.</option>
+                                                                                    <option disabled>구분을 선택해 주세요.</option>
                                                                                     <option value="자기주도형 진로역량강화 프로그램" selected>자기주도형 진로역량강화 프로그램</option>
                                                                                     <option value="TEST">TEST</option>
                                                                                 </select>
@@ -429,7 +429,7 @@
                                                                             <div class="new_selectbox box_w120">
                                                                                 <label for="year" class="sr_only">년도</label>
                                                                                 <select id="year" name="year" title="년도">
-                                                                                    <option disabled="">년도</option>
+                                                                                    <option disabled>년도</option>
                                                                                     <option value="2025" selected>2025년</option>
                                                                                     <option value="2024">2024년</option>
                                                                                 </select>
@@ -437,7 +437,7 @@
                                                                             <div class="new_selectbox box_w120">
                                                                                 <label for="month" class="sr_only">월</label>
                                                                                 <select id="month" name="month" title="월">
-                                                                                    <option disabled="">월</option>
+                                                                                    <option disabled>월</option>
                                                                                     <option value="1" selected>1월</option>
                                                                                     <option value="2">2월</option>
                                                                                     <option value="3">3월</option>
@@ -519,7 +519,7 @@
                                                                             <div class="new_selectbox">
                                                                                 <label for="division" class="sr_only">구분</label>
                                                                                 <select id="division" name="division" title="구분">
-                                                                                    <option disabled="">구분을 선택해 주세요.</option>
+                                                                                    <option disabled>구분을 선택해 주세요.</option>
                                                                                     <option value="동아리, 공모전, 대회활동, 일경험, 인턴 등의 목표" selected>동아리, 공모전, 대회활동, 일경험, 인턴 등의 목표</option>
                                                                                     <option value="TEST">TEST</option>
                                                                                 </select>
@@ -527,7 +527,7 @@
                                                                             <div class="new_selectbox box_w120">
                                                                                 <label for="grade" class="sr_only">학년</label>
                                                                                 <select id="grade" name="grade" title="학년">
-                                                                                    <option disabled="">학년</option>
+                                                                                    <option disabled>학년</option>
                                                                                     <option value="1" selected>1학년</option>
                                                                                     <option value="2">2학년</option>
                                                                                     <option value="3">3학년</option>
@@ -537,7 +537,7 @@
                                                                             <div class="new_selectbox box_w120">
                                                                                 <label for="semester" class="sr_only">학기</label>
                                                                                 <select id="semester" name="semester" title="학기">
-                                                                                    <option disabled="">학기</option>
+                                                                                    <option disabled>학기</option>
                                                                                     <option value="1" selected>1학기</option>
                                                                                     <option value="2">2학기</option>
                                                                                 </select>
